--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.0",
     "csv-parser": "^3.2.0",
     "d3.js": "^0.0.2-security",
+    "moment": "^2.30.1",
     "next": "13.5.6",
     "papaparse": "^5.5.3",
     "react": "^18",
